--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>org.hibernate.orm</groupId>
-    	<artifactId>hibernate-core</artifactId>
-    	<version>6.1.1.Final</version>
-    </dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-entitymanager</artifactId>
+	    <version>5.6.10.Final</version>
+	</dependency>
     <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
-    	<version>8.0.29</version>
+    	<version>8.0.27</version>
     </dependency>
   </dependencies>
 
